# File2Package.py

./: .gitlab-ci.yml  ReadMe.md  setup.cfg
File2Package/: BackendsDiscoverer.py  __init__.py  __main__.py  database.py  interfaces.py
tests/: tests.py
