[metadata]
name = File2Package
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/File2Package.py
description = Returns a package given filename
long_description = file: ReadMe.md
keywords = package, location
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires = 
	PackageRef[versioned] @ git+https://gitlab.com/KOLANICH/PackageRef.py.git
	#datrie @ git+https://github.com/pytries/datrie.git
	datrie @ https://gitlab.com/KOLANICH-subgroups/packages/datrie/-/jobs/artifacts/master/raw/wheels/datrie-0.CI_python-py3-none-any.whl?job=build
	MempipedPath @ git+https://gitlab.com/KOLANICH/MempipedPath.py.git
	pantarei @ git+https://gitlab.com/KOLANICH/pantarei.py.git

extras_requires = 
	byName = appdirs @ git+https://github.com/ActiveState/appdirs.git

python_requires = >=3.4
zip_safe = True
packages = File2Package
setup_requires = setuptools_scm;
